--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,17 @@ dependencies:
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.10+1
   gap: ^3.0.1
+  hive_flutter: ^1.1.0
+  hive: ^2.2.3
   persistent_bottom_nav_bar_v2: ^5.2.3
 
 dev_dependencies:
+  build_runner: ^2.4.8
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  hive_generator: ^2.0.1
+
 
 flutter:
   uses-material-design: true
